// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with modal 1`] = `
<div
  className="ant-row referral-row-template-class general-background-border false"
  style={Object {}}
>
  <div
    className="ant-col ant-col-24"
    style={Object {}}
  >
    <h5
      className="ant-typography"
      data-testid="referral-row-title"
      style={
        Object {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Create a custom link
    </h5>
  </div>
  <div
    className="ant-col ant-col-23"
    data-testid="referral-row-children"
    style={Object {}}
  >
    <form
      className="ant-form ant-form-inline ant-form-large referral-link-form"
      data-testid="generate-link-form"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                className="ant-select ant-select-lg ant-select-single ant-select-show-arrow"
                data-testid="select-destination-option"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                style={
                  Object {
                    "borderRadius": 10,
                    "width": 350,
                  }
                }
              >
                <div
                  className="ant-select-selector"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                >
                  <span
                    className="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="destination_list_0"
                      aria-autocomplete="list"
                      aria-controls="destination_list"
                      aria-haspopup="listbox"
                      aria-owns="destination_list"
                      autoComplete="off"
                      className="ant-select-selection-search-input"
                      id="destination"
                      onChange={[Function]}
                      onCompositionEnd={[Function]}
                      onCompositionStart={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onPaste={[Function]}
                      readOnly={true}
                      role="combobox"
                      style={
                        Object {
                          "opacity": 0,
                        }
                      }
                      type="search"
                      unselectable="on"
                      value=""
                    />
                  </span>
                  <span
                    className="ant-select-selection-item"
                    title="MPL PRO"
                  >
                    MPL PRO
                  </span>
                </div>
                <span
                  aria-hidden={true}
                  className="ant-select-arrow"
                  onMouseDown={[Function]}
                  style={
                    Object {
                      "WebkitUserSelect": "none",
                      "userSelect": "none",
                    }
                  }
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    className="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <button
                className="ant-btn ant-btn-primary ant-btn-lg button-common-class generate-link-button"
                data-testid="generate-link-button"
                onClick={[Function]}
                type="submit"
              >
                <span>
                  Generate Link
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`matches snapshot without modal 1`] = `
<div
  className="ant-row referral-row-template-class general-background-border false"
  style={Object {}}
>
  <div
    className="ant-col ant-col-24"
    style={Object {}}
  >
    <h5
      className="ant-typography"
      data-testid="referral-row-title"
      style={
        Object {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Create a custom link
    </h5>
  </div>
  <div
    className="ant-col ant-col-23"
    data-testid="referral-row-children"
    style={Object {}}
  >
    <form
      className="ant-form ant-form-inline ant-form-large referral-link-form"
      data-testid="generate-link-form"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                className="ant-select ant-select-lg ant-select-single ant-select-show-arrow"
                data-testid="select-destination-option"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                style={
                  Object {
                    "borderRadius": 10,
                    "width": 350,
                  }
                }
              >
                <div
                  className="ant-select-selector"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                >
                  <span
                    className="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="destination_list_0"
                      aria-autocomplete="list"
                      aria-controls="destination_list"
                      aria-haspopup="listbox"
                      aria-owns="destination_list"
                      autoComplete="off"
                      className="ant-select-selection-search-input"
                      id="destination"
                      onChange={[Function]}
                      onCompositionEnd={[Function]}
                      onCompositionStart={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onPaste={[Function]}
                      readOnly={true}
                      role="combobox"
                      style={
                        Object {
                          "opacity": 0,
                        }
                      }
                      type="search"
                      unselectable="on"
                      value=""
                    />
                  </span>
                  <span
                    className="ant-select-selection-placeholder"
                  >
                    Select a Destination
                  </span>
                </div>
                <span
                  aria-hidden={true}
                  className="ant-select-arrow"
                  onMouseDown={[Function]}
                  style={
                    Object {
                      "WebkitUserSelect": "none",
                      "userSelect": "none",
                    }
                  }
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    className="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <button
                className="ant-btn ant-btn-primary ant-btn-lg button-common-class generate-link-button"
                data-testid="generate-link-button"
                onClick={[Function]}
                type="submit"
              >
                <span>
                  Generate Link
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
